[project]
name = "comfyui-icc-nodes"
description = "This repository support processing Comfyui image nodes with ICC profile, load and save images with ICC profile"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/rubi-du/ComfyUI-ICC-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "duhaifeng"
DisplayName = "ComfyUI-ICC-nodes"
Icon = ""
